@@ -906,7 +906,7 @@ def test_autodoc_module_scope(app):
         '',
         '.. py:attribute:: Class.mdocattr',
         '   :module: target',
-        '   :annotation: = <_io.StringIO object>',
+        '   :value: <_io.StringIO object>',
         '',
         '   should be documented as well - süß',
         '   '
@@ -922,7 +922,7 @@ def test_autodoc_class_scope(app):
         '',
         '.. py:attribute:: Class.mdocattr',
         '   :module: target',
-        '   :annotation: = <_io.StringIO object>',
+        '   :value: <_io.StringIO object>',
         '',
         '   should be documented as well - süß',
         '   '
@@ -942,12 +942,12 @@ def test_class_attributes(app):
         '   ',
         '   .. py:attribute:: AttCls.a1',
         '      :module: target',
-        '      :annotation: = hello world',
+        '      :value: hello world',
         '   ',
         '   ',
         '   .. py:attribute:: AttCls.a2',
         '      :module: target',
-        '      :annotation: = None',
+        '      :value: None',
         '   '
     ]
 
@@ -966,7 +966,7 @@ def test_instance_attributes(app):
         '   ',
         '   .. py:attribute:: InstAttCls.ca1',
         '      :module: target',
-        "      :annotation: = 'a'",
+        "      :value: 'a'",
         '   ',
         '      Doc comment for class attribute InstAttCls.ca1.',
         '      It can have multiple lines.',
@@ -974,28 +974,28 @@ def test_instance_attributes(app):
         '   ',
         '   .. py:attribute:: InstAttCls.ca2',
         '      :module: target',
-        "      :annotation: = 'b'",
+        "      :value: 'b'",
         '   ',
         '      Doc comment for InstAttCls.ca2. One line only.',
         '      ',
         '   ',
         '   .. py:attribute:: InstAttCls.ca3',
         '      :module: target',
-        "      :annotation: = 'c'",
+        "      :value: 'c'",
         '   ',
         '      Docstring for class attribute InstAttCls.ca3.',
         '      ',
         '   ',
         '   .. py:attribute:: InstAttCls.ia1',
         '      :module: target',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '      Doc comment for instance attribute InstAttCls.ia1',
         '      ',
         '   ',
         '   .. py:attribute:: InstAttCls.ia2',
         '      :module: target',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '      Docstring for instance attribute InstAttCls.ia2.',
         '      '
@@ -1014,7 +1014,7 @@ def test_instance_attributes(app):
         '   ',
         '   .. py:attribute:: InstAttCls.ca1',
         '      :module: target',
-        "      :annotation: = 'a'",
+        "      :value: 'a'",
         '   ',
         '      Doc comment for class attribute InstAttCls.ca1.',
         '      It can have multiple lines.',
@@ -1022,7 +1022,7 @@ def test_instance_attributes(app):
         '   ',
         '   .. py:attribute:: InstAttCls.ia1',
         '      :module: target',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '      Doc comment for instance attribute InstAttCls.ia1',
         '      '
@@ -1090,28 +1090,28 @@ def test_enum_class(app):
         '   ',
         '   .. py:attribute:: EnumCls.val1',
         '      :module: target.enum',
-        '      :annotation: = 12',
+        '      :value: 12',
         '   ',
         '      doc for val1',
         '      ',
         '   ',
         '   .. py:attribute:: EnumCls.val2',
         '      :module: target.enum',
-        '      :annotation: = 23',
+        '      :value: 23',
         '   ',
         '      doc for val2',
         '      ',
         '   ',
         '   .. py:attribute:: EnumCls.val3',
         '      :module: target.enum',
-        '      :annotation: = 34',
+        '      :value: 34',
         '   ',
         '      doc for val3',
         '      ',
         '   ',
         '   .. py:attribute:: EnumCls.val4',
         '      :module: target.enum',
-        '      :annotation: = 34',
+        '      :value: 34',
         '   '
     ]
 
@@ -1121,7 +1121,7 @@ def test_enum_class(app):
         '',
         '.. py:attribute:: EnumCls.val1',
         '   :module: target.enum',
-        '   :annotation: = 12',
+        '   :value: 12',
         '',
         '   doc for val1',
         '   '
@@ -1405,38 +1405,40 @@ def test_autodoc_typed_instance_variables(app):
         '   ',
         '   .. py:attribute:: Class.attr1',
         '      :module: target.typed_vars',
-        '      :annotation: = 0',
+        '      :type: int',
+        '      :value: 0',
         '   ',
         '   ',
         '   .. py:attribute:: Class.attr2',
         '      :module: target.typed_vars',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '   ',
         '   .. py:attribute:: Class.attr3',
         '      :module: target.typed_vars',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '      attr3',
         '      ',
         '   ',
         '   .. py:attribute:: Class.attr4',
         '      :module: target.typed_vars',
-        '      :annotation: = None',
+        '      :value: None',
         '   ',
         '      attr4',
         '      ',
         '',
         '.. py:data:: attr1',
         '   :module: target.typed_vars',
-        "   :annotation: = ''",
+        '   :type: str',
+        "   :value: ''",
         '',
         '   attr1',
         '   ',
         '',
         '.. py:data:: attr2',
         '   :module: target.typed_vars',
-        "   :annotation: = None",
+        "   :value: None",
         '',
         '   attr2',
         '   '
@@ -1455,7 +1457,7 @@ def test_autodoc_for_egged_code(app):
         '',
         '.. py:data:: CONSTANT',
         '   :module: sample',
-        '   :annotation: = 1',
+        '   :value: 1',
         '',
         '   constant on sample.py',
         '   ',
